force-app/main/default/objects/RBRKRuleCondition__c/RBRKRuleCondition__c.object-meta.xml
<CustomObject>
    <label>Rule Condition</label>
    <nameField>
        <label>Rule Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>