force-app/main/default/objects/RBRKRuleCondition__c/fields/RBRKFilterType__c.field-meta.xml
<CustomField>
    <fullName>RBRKFilterType__c</fullName>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>