force-app/main/default/objects/RBRKRuleCondition__c/fields/RBRKFilterValue__c.field-meta.xml
<CustomField>
    <fullName>RBRKFilterValue__c</fullName>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>