force-app/main/default/objects/RBRKRuleCondition__c/fields/RBRKIndex__c.field-meta.xml
<CustomField>
    <fullName>RBRKIndex__c</fullName>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>