force-app/main/default/objects/RBRKRuleCondition__c/fields/RBRKLogic__c.field-meta.xml
<CustomField>
    <fullName>RBRKLogic__c</fullName>
    <label>Logic</label>
    <length>200</length>
    <type>Text</type>
</CustomField>