force-app/main/default/objects/RBRKRuleCondition__c/fields/RBRKQuoteExceptions__c.field-meta.xml
<CustomField>
    <fullName>RBRKQuoteExceptions__c</fullName>
    <label>Quote Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>