force-app/main/default/objects/RBRKRuleCondition__c/fields/RBRKRuleName__c.field-meta.xml
<CustomField>
    <fullName>RBRKRuleName__c</fullName>
    <label>Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>