force-app/main/default/objects/RBRKRuleCondition__c/fields/RBRKTestedField__c.field-meta.xml
<CustomField>
    <fullName>RBRKTestedField__c</fullName>
    <label>Tested Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>