force-app/main/default/objects/RBRKRuleCondition__c/fields/RBRKTestedObject__c.field-meta.xml
<CustomField>
    <fullName>RBRKTestedObject__c</fullName>
    <label>Tested Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Quote Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>