force-app/main/default/objects/RBRKRuleCondition__c/fields/RBRKTestVariable__c.field-meta.xml
<CustomField>
    <fullName>RBRKTestVariable__c</fullName>
    <label>Test Variable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>