force-app/main/default/objects/RBRKRuleCondition__c/fields/RuleJSON__c.field-meta.xml
<CustomField>
    <fullName>RuleJSON__c</fullName>
    <label>RuleJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>