force-app/main/default/objects/RBRKRuleCondition__c/fields/RuleSVJSON__c.field-meta.xml
<CustomField>
    <fullName>RuleSVJSON__c</fullName>
    <label>RuleSVJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>