force-app/main/default/objects/RBRKRuleCondition__c/fields/VariableName__c.field-meta.xml
<CustomField>
    <fullName>VariableName__c</fullName>
    <label>Variable Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>